--- a/resume.html
+++ b/resume.html
@@ -316,7 +316,7 @@
         <div class="row">
 
             <div class="col-md-6 pt-5">
-                <h2 class="h2 text-success border-bottom pb-3 border-light logo">Sobre mí</h2>
+                <h2 class="h2 text-light border-bottom pb-3 border-light logo">Sobre mí</h2>
                 <ul class="list-unstyled text-light footer-link-list">
                     <li>
                         <i class="fas fa-map-marker-alt fa-fw"></i>
