--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Una vista a quien soy">
     <meta name="author" content="Devcrud">
     <title>Alex Cedeño</title>
+    <!-- font icons -->
+    <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + JohnDoe main styles -->
 	<link rel="stylesheet" href="assets/css/johndoe.css">
 </head>
