--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Una vista a quien soy">
     <meta name="author" content="Devcrud">
-    <title>Alex Cedeño</title>
+    <title>Contacto</title>
+    <!-- font icons -->
+    <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + JohnDoe main styles -->
 	<link rel="stylesheet" href="assets/css/johndoe.css">
 </head>
@@ -36,10 +38,10 @@
             <div class="collapse mt-sm-20 navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a href="#home" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about" class="nav-link">About</a>
+                        <a href="index.html" class="nav-link">About</a>
                     </li>
                     
                 </ul>
@@ -85,6 +87,7 @@
         <div class="container py-5">
             <div class="row py-5">
                 <form class="col-md-9 m-auto" method="post" role="form">
+                    <H2>Contáctame</H2>
                     <div class="row">
                         <div class="form-group col-md-6 mb-3">
                             <label for="inputname">Name</label>
@@ -115,7 +118,6 @@
     </body>
     </html>
     
-    <!-- End Contact -->
 
 
     <!-- Start Footer -->
