--- a/resume.html
+++ b/resume.html
@@ -339,11 +339,11 @@
             <div class="col-md-6 pt-5">
                 <h2 class="h2 text-light border-bottom pb-3 border-light">Further Info</h2>
                 <ul class="list-unstyled text-light footer-link-list">
-                    <li><a class="text-decoration-none" href="#">Home</a></li>
-                    <li><a class="text-decoration-none" href="#">About Us</a></li>
+                    <li><a class="text-decoration-none" href="index.html">Home</a></li>
+                    <li><a class="text-decoration-none" href="about.html">About Us</a></li>
                     <li><a class="text-decoration-none" href="#">Shop Locations</a></li>
                     <li><a class="text-decoration-none" href="#">FAQs</a></li>
-                    <li><a class="text-decoration-none" href="#">Contact</a></li>
+                    <li><a class="text-decoration-none" href="contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -355,11 +355,11 @@
             </div>
             <div class="col-auto me-auto">
                 <ul class="list-inline text-left footer-icons">
-                    <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-                    <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                    <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
-                    <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                    <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+                    <li class="list-inline-item social-item"><a class="social-link text-light" href="https://www.facebook.com"><i class="ti-facebook" aria-hidden="true"></i></a></li>
+                    <li class="list-inline-item social-item"><a class="social-link text-light" href="https://www.x.com"><i class="ti-twitter" aria-hidden="true"></i></a></li>
+                    <li class="list-inline-item social-item"><a class="social-link text-light" href="https://www.google.com"><i class="ti-google" aria-hidden="true"></i></a></li>
+                    <li class="list-inline-item social-item"><a class="social-link text-light" href="https://www.instagram.com"><i class="ti-instagram" aria-hidden="true"></i></a></li>
+                    <li class="list-inline-item social-item"><a class="social-link text-light" href="https://github.com/Drakentdev"><i class="ti-github" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <div class="col-auto">
