--- a/about.html
+++ b/about.html
@@ -50,11 +50,11 @@
             <div class="row text-light mb-4">
                 <div class="col-auto me-auto" style="padding-top: 20px; padding-left: 505px;">
                     <ul class="list-inline text-left footer-icons">
-                        <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item social-item"><a class="social-link text-light" href="https://www.facebook.com"><i class="ti-facebook" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item social-item"><a class="social-link text-light" href="https://www.x.com"><i class="ti-twitter" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item social-item"><a class="social-link text-light" href="https://www.google.com"><i class="ti-google" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item social-item"><a class="social-link text-light" href="https://www.instagram.com"><i class="ti-instagram" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item social-item"><a class="social-link text-light" href="https://github.com/Drakentdev"><i class="ti-github" aria-hidden="true"></i></a></li>
                     </ul>
                 </div>
             </div>
