--- a/resume.html
+++ b/resume.html
@@ -209,7 +209,7 @@
             <div class="col-md-6 col-lg-3">
                 <div class="row">
                     <div class="col-5 text-right text-light border-right py-3">
-                        <div class="m-auto"><i class="ti-face-smile icon-xl"></i></div>
+                        <div class="m-auto"><i class="ti-face-sad icon-xl"></i></div>
                     </div>
                     <div class="col-7 text-left py-3">
                         <h1 class="text-danger font-weight-bold font40">-100</h1>
@@ -220,7 +220,7 @@
             <div class="col-md-6 col-lg-3">
                 <div class="row">
                     <div class="col-5 text-right text-light border-right py-3">
-                        <div class="m-auto"><i class="ti-heart-broken icon-xl"></i></div>
+                        <div class="m-auto"><i class="ti-heart icon-xl"></i></div>
                     </div>
                     <div class="col-7 text-left py-3">
                         <h1 class="text-danger font-weight-bold font40">80k</h1>
