--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Una vista a quien soy">
     <meta name="author" content="Devcrud">
-    <title>Contacto</title>
+    <title>Contact</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + JohnDoe main styles -->
@@ -162,11 +162,11 @@
             </div>
             <div class="col-auto me-auto">
                 <ul class="list-inline text-left footer-icons">
-                    <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-                    <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                    <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
-                    <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                    <li class="list-inline-item social-item"><a class="social-link text-light" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+                    <li class="list-inline-item social-item"><a class="social-link text-light" href="https://www.facebook.com"><i class="ti-facebook" aria-hidden="true"></i></a></li>
+                    <li class="list-inline-item social-item"><a class="social-link text-light" href="https://www.x.com"><i class="ti-twitter" aria-hidden="true"></i></a></li>
+                    <li class="list-inline-item social-item"><a class="social-link text-light" href="https://www.google.com"><i class="ti-google" aria-hidden="true"></i></a></li>
+                    <li class="list-inline-item social-item"><a class="social-link text-light" href="https://www.instagram.com"><i class="ti-instagram" aria-hidden="true"></i></a></li>
+                    <li class="list-inline-item social-item"><a class="social-link text-light" href="https://github.com/Drakentdev"><i class="ti-github" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <div class="col-auto">
